# bili2txt

./: .env.example  .gitignore  README.md  pyproject.toml
src/bili2txt/: __init__.py  cache.py  cli.py  config.py  prompts.py
src/bili2txt/prompts/: academic.j2  bullets.j2  casual.j2  default.j2  system.j2
src/bili2txt/stages/: __init__.py  download.py  extract.py  summarize.py  transcribe.py
tests/: test_cache.py  test_cli.py  test_config.py  test_download.py  test_prompts.py  test_summarize.py  test_transcribe.py
