[project]
name = "bili2txt"
version = "0.1.0"
description = "B站视频 → 音频 → 文字 → LLM 总结 一条龙 CLI"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "faster-whisper>=1.2.1",
    "hf-xet>=1.5.1",
    "modelscope>=1.38.1",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "yt-dlp>=2026.7.4",
]

[project.scripts]
bili2txt = "bili2txt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bili2txt"]

# 国内网络环境，把 uv 源锁到清华镜像
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
