[project]
name = "bili2txt"
version = "0.1.0"
description = "B站视频 → 音频 → 文字 → LLM 总结 一条龙 CLI"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "faster-whisper>=1.2.1",
    "hf-xet>=1.5.1",
    "modelscope>=1.38.1",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "yt-dlp>=2026.7.4",
    "jinja2>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
bili2txt = "bili2txt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bili2txt"]

[tool.hatch.build]
include = ["src/bili2txt/prompts/*.j2"]

# 国内网络环境默认走阿里云镜像（清华镜像对部分 wheel 返回 403）
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

# 官方 PyPI 作为备用源（镜像缺失/拦截某些包时回退）
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
